files for the hands-on

--- a/RNN+Embeddings/word2vec_train.ipynb
+++ b/RNN+Embeddings/word2vec_train.ipynb
@@ -30,6 +30,7 @@
    "source": [
     "#imports\n",
     "import multiprocessing\n",
+    "import os\n",
     "\n",
     "from gensim.corpora import  WikiCorpus\n",
     "from gensim.models import Word2Vec\n",
@@ -44,20 +45,16 @@
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "mkdir: cannot create directory ‘data’: File exists\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Save dataset/model\n",
-    "!mkdir data\n",
-    "!mkdir model\n",
-    "!mkdir \"model/word2vec\""
+    "#!mkdir data\n",
+    "#os.mkdir('data')\n",
+    "#!mkdir model\n",
+    "os.mkdir('model')\n",
+    "#model_path = os.path.join('model', 'word2vec')\n",
+    "#!mkdir \"model/word2vec\"\n",
+    "os.mkdir('model/word2vec')"
    ]
   },
   {
@@ -82,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -97,11 +94,15 @@
     "#O arquivo com a Wikipédia completa tem 1.8GB e pode ser baixado no link acima. O que utilizaremos tem apenas 307MB\n",
     "#inp = \"data/wiki.pt-br.text\"\n",
     "#dataset_filename = 'data/wiki.pt-br.text.zip'\n",
-    "outp = \"model/word2vec/wiki.pt-br.word2vec.model\"\n",
+    "#outp = \"model/word2vec/wiki.pt-br.word2vec.model\"\n",
+    "outp = os.path.join('model', 'word2vec', 'wiki.pt-br.word2vec.model')\n",
     "\n",
-    "inp = \"data/wiki.pt-br_part.text\"\n",
-    "dataset_filename = 'data/wiki.pt-br_part.text.zip'\n",
-    "dataset_folder_path = 'data'\n",
+    "#inp = \"data/wiki.pt-br_part.text\"\n",
+    "inp = os.path.join('data', 'wiki.pt-br_part.text')\n",
+    "#dataset_filename = 'data/wiki.pt-br_part.text.zip'\n",
+    "dataset_filename = os.path.join('data', 'wiki.pt-br_part.text.zip')\n",
+    "#dataset_folder_path = 'data'\n",
+    "dataset_folder_path = os.path.join('data')\n",
     "\n",
     "with zipfile.ZipFile(dataset_filename) as zip_ref:\n",
     "    zip_ref.extractall(dataset_folder_path)"
@@ -162,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -173,8 +174,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 18min 44s, sys: 4.03 s, total: 18min 48s\n",
-      "Wall time: 5min 13s\n"
+      "CPU times: user 18min 48s, sys: 5.01 s, total: 18min 53s\n",
+      "Wall time: 5min 23s\n"
      ]
     }
    ],
@@ -195,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -219,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true,
     "deletable": true,
