--- a/RNN+Embeddings/word2vec_test.ipynb
+++ b/RNN+Embeddings/word2vec_test.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -23,7 +23,8 @@
    },
    "outputs": [],
    "source": [
-    "import gensim"
+    "import gensim\n",
+    "import os"
    ]
   },
   {
@@ -38,16 +39,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
    "outputs": [],
    "source": [
     "#import data\n",
-    "outp = \"model/word2vec/wiki.pt-br.word2vec.model\""
+    "#outp = \"model/word2vec/wiki.pt-br.word2vec.model\"\n",
+    "outp = os.path.join('model', 'word2vec', 'wiki.pt-br.word2vec.model')"
    ]
   },
   {
@@ -62,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -92,72 +94,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('rainha', 0.563403844833374),\n",
-       " ('esposa', 0.5476986765861511),\n",
-       " ('concubina', 0.5263887643814087),\n",
-       " ('consorte', 0.4897775650024414),\n",
-       " ('infanta', 0.4890763759613037),\n",
-       " ('madrasta', 0.4801637530326843),\n",
-       " ('viúva', 0.47895339131355286),\n",
-       " ('princesa', 0.4750368297100067),\n",
-       " ('sobrinha', 0.4735983610153198),\n",
-       " ('filha', 0.46588921546936035)]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model.wv.most_similar(positive=['rei', 'mulher'], negative=['homem'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('dilma', 0.5366573333740234),\n",
-       " ('rousseff', 0.4682416617870331),\n",
-       " ('senadora', 0.4520450830459595),\n",
-       " ('roussef', 0.42890864610671997),\n",
-       " ('presidenta', 0.4184250831604004),\n",
-       " ('fhc', 0.4024085998535156),\n",
-       " ('maisa', 0.4022766947746277),\n",
-       " ('advogada', 0.3956421911716461),\n",
-       " ('petista', 0.3870047330856323),\n",
-       " ('enteada', 0.3752862811088562)]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model.wv.most_similar(positive=['lula', 'mulher'], negative=['homem'])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
    "metadata": {
     "collapsed": false,
@@ -168,16 +104,16 @@
     {
      "data": {
       "text/plain": [
-       "[('advogada', 0.674094557762146),\n",
-       " ('empresária', 0.5596073269844055),\n",
-       " ('esposa', 0.5396914482116699),\n",
-       " ('juíza', 0.5330030918121338),\n",
-       " ('psicóloga', 0.5321911573410034),\n",
-       " ('socialite', 0.5081355571746826),\n",
-       " ('enteada', 0.49844270944595337),\n",
-       " ('secretária', 0.4902417063713074),\n",
-       " ('socióloga', 0.4889090657234192),\n",
-       " ('enfermeira', 0.48639440536499023)]"
+       "[('rainha', 0.5728097558021545),\n",
+       " ('infanta', 0.5286685824394226),\n",
+       " ('princesa', 0.5110589265823364),\n",
+       " ('esposa', 0.504840612411499),\n",
+       " ('concubina', 0.49223142862319946),\n",
+       " ('herdeira', 0.4909839928150177),\n",
+       " ('coroação', 0.4820205569267273),\n",
+       " ('neta', 0.4780043959617615),\n",
+       " ('sobrinha', 0.4748428463935852),\n",
+       " ('consorte', 0.47434908151626587)]"
       ]
      },
      "execution_count": 6,
@@ -186,7 +122,7 @@
     }
    ],
    "source": [
-    "model.wv.most_similar(positive=['advogado', 'mulher'], negative=['homem'])"
+    "model.wv.most_similar(positive=['rei', 'mulher'], negative=['homem'])"
    ]
   },
   {
@@ -201,16 +137,16 @@
     {
      "data": {
       "text/plain": [
-       "[('enfermeira', 0.5709562301635742),\n",
-       " ('psicóloga', 0.5430200695991516),\n",
-       " ('parteira', 0.5426148176193237),\n",
-       " ('cirurgiã', 0.5260206460952759),\n",
-       " ('pediatra', 0.5143420696258545),\n",
-       " ('ginecologista', 0.5094795227050781),\n",
-       " ('obstetra', 0.5006735920906067),\n",
-       " ('esposa', 0.48979347944259644),\n",
-       " ('advogada', 0.48630261421203613),\n",
-       " ('psicoterapeuta', 0.4805002808570862)]"
+       "[('dilma', 0.6301570534706116),\n",
+       " ('rousseff', 0.6011762619018555),\n",
+       " ('presidenta', 0.5419915318489075),\n",
+       " ('erundina', 0.5370290279388428),\n",
+       " ('candidata', 0.5196089744567871),\n",
+       " ('senadora', 0.5106953382492065),\n",
+       " ('roussef', 0.5073909759521484),\n",
+       " ('fhc', 0.502558171749115),\n",
+       " ('petista', 0.5005642175674438),\n",
+       " ('kirchner', 0.49782586097717285)]"
       ]
      },
      "execution_count": 7,
@@ -219,7 +155,7 @@
     }
    ],
    "source": [
-    "model.wv.most_similar(positive=['médico', 'mulher'], negative=['homem'])"
+    "model.wv.most_similar(positive=['lula', 'mulher'], negative=['homem'])"
    ]
   },
   {
@@ -234,16 +170,16 @@
     {
      "data": {
       "text/plain": [
-       "[('programadora', 0.43346863985061646),\n",
-       " ('empresária', 0.4250830113887787),\n",
-       " ('designer', 0.424478143453598),\n",
-       " ('desenvolvedor', 0.42184334993362427),\n",
-       " ('fotógrafa', 0.42174917459487915),\n",
-       " ('maquiadora', 0.39872074127197266),\n",
-       " ('psicoterapeuta', 0.3951054811477661),\n",
-       " ('musicista', 0.3945704698562622),\n",
-       " ('interface', 0.3872838020324707),\n",
-       " ('api', 0.3847675919532776)]"
+       "[('advogada', 0.5967177748680115),\n",
+       " ('secretária', 0.5743982791900635),\n",
+       " ('professora', 0.5717214941978455),\n",
+       " ('enfermeira', 0.5600820183753967),\n",
+       " ('empresária', 0.5504055023193359),\n",
+       " ('juíza', 0.5398902893066406),\n",
+       " ('diretora', 0.5245388746261597),\n",
+       " ('psicóloga', 0.5145259499549866),\n",
+       " ('vereadora', 0.514488697052002),\n",
+       " ('conselheira', 0.5137046575546265)]"
       ]
      },
      "execution_count": 8,
@@ -252,7 +188,7 @@
     }
    ],
    "source": [
-    "model.wv.most_similar(positive=['programador', 'mulher'], negative=['homem'])"
+    "model.wv.most_similar(positive=['advogado', 'mulher'], negative=['homem'])"
    ]
   },
   {
@@ -267,16 +203,16 @@
     {
      "data": {
       "text/plain": [
-       "[('paris', 0.549514889717102),\n",
-       " ('marselha', 0.5035914778709412),\n",
-       " ('picardia', 0.4949594736099243),\n",
-       " ('aquitânia', 0.49078822135925293),\n",
-       " ('bordéus', 0.4830194413661957),\n",
-       " ('provença', 0.47275757789611816),\n",
-       " ('alsácia', 0.4636075496673584),\n",
-       " ('dijon', 0.4623123109340668),\n",
-       " ('amiens', 0.46183884143829346),\n",
-       " ('montpellier', 0.46097874641418457)]"
+       "[('enfermeira', 0.5861247777938843),\n",
+       " ('professora', 0.5441340804100037),\n",
+       " ('maternidade', 0.49257519841194153),\n",
+       " ('clínica', 0.47466084361076355),\n",
+       " ('aluna', 0.46771949529647827),\n",
+       " ('governanta', 0.46505677700042725),\n",
+       " ('odontológico', 0.46411725878715515),\n",
+       " ('freira', 0.4632118046283722),\n",
+       " ('cirurgia', 0.46127355098724365),\n",
+       " ('sanitarista', 0.45934125781059265)]"
       ]
      },
      "execution_count": 9,
@@ -285,7 +221,7 @@
     }
    ],
    "source": [
-    "model.wv.most_similar(positive=['frança', 'lisboa'], negative=['portugal'])"
+    "model.wv.most_similar(positive=['médico', 'mulher'], negative=['homem'])"
    ]
   },
   {
@@ -300,16 +236,16 @@
     {
      "data": {
       "text/plain": [
-       "[('tutora', 0.4640021324157715),\n",
-       " ('sogra', 0.462051659822464),\n",
-       " ('enteada', 0.45133066177368164),\n",
-       " ('esposa', 0.44530925154685974),\n",
-       " ('prostituta', 0.43312495946884155),\n",
-       " ('companheira', 0.43247896432876587),\n",
-       " ('amargurada', 0.43100398778915405),\n",
-       " ('orgulhosa', 0.43008291721343994),\n",
-       " ('enfermeira', 0.4280928671360016),\n",
-       " ('solteirona', 0.4227881133556366)]"
+       "[('programadora', 0.5180810689926147),\n",
+       " ('desenvolvedora', 0.4670116901397705),\n",
+       " ('desktop', 0.45217832922935486),\n",
+       " ('blender', 0.4490089416503906),\n",
+       " ('fotógrafa', 0.44877350330352783),\n",
+       " ('margrit', 0.4431842565536499),\n",
+       " ('empresária', 0.44247788190841675),\n",
+       " ('driver', 0.43612128496170044),\n",
+       " ('desenvolvedor', 0.43602490425109863),\n",
+       " ('designer', 0.4357184171676636)]"
       ]
      },
      "execution_count": 10,
@@ -318,7 +254,7 @@
     }
    ],
    "source": [
-    "model.wv.most_similar(positive=['insuportável', 'mulher'], negative=['homem'])"
+    "model.wv.most_similar(positive=['programador', 'mulher'], negative=['homem'])"
    ]
   },
   {
@@ -333,16 +269,16 @@
     {
      "data": {
       "text/plain": [
-       "[('minnie', 0.480533242225647),\n",
-       " ('namorada', 0.4215421974658966),\n",
-       " ('tia', 0.42032378911972046),\n",
-       " ('patty', 0.4116852879524231),\n",
-       " ('srta', 0.40983036160469055),\n",
-       " ('enfermeira', 0.40937376022338867),\n",
-       " ('mabel', 0.40793412923812866),\n",
-       " ('garotinha', 0.4013059735298157),\n",
-       " ('esposa', 0.40110117197036743),\n",
-       " ('sally', 0.4004097580909729)]"
+       "[('paris', 0.5455796718597412),\n",
+       " ('normandia', 0.4577951431274414),\n",
+       " ('estrasburgo', 0.44294026494026184),\n",
+       " ('aquitânia', 0.41559627652168274),\n",
+       " ('provença', 0.41353923082351685),\n",
+       " ('lyon', 0.4129228889942169),\n",
+       " ('flandres', 0.4041200280189514),\n",
+       " ('toulouse', 0.40386873483657837),\n",
+       " ('bordéus', 0.39926737546920776),\n",
+       " ('marselha', 0.39725032448768616)]"
       ]
      },
      "execution_count": 11,
@@ -351,7 +287,7 @@
     }
    ],
    "source": [
-    "model.wv.most_similar(positive=['mickey', 'mulher'], negative=['homem'])"
+    "model.wv.most_similar(positive=['frança', 'lisboa'], negative=['portugal'])"
    ]
   },
   {
@@ -366,16 +302,16 @@
     {
      "data": {
       "text/plain": [
-       "[('lg', 0.7303698062896729),\n",
-       " ('motorola', 0.6857724189758301),\n",
-       " ('electronics', 0.6479246616363525),\n",
-       " ('panasonic', 0.6459462642669678),\n",
-       " ('lenovo', 0.6419277787208557),\n",
-       " ('anycall', 0.6419171094894409),\n",
-       " ('asus', 0.6349570155143738),\n",
-       " ('daewoo', 0.6341103315353394),\n",
-       " ('bluefangs', 0.6229230165481567),\n",
-       " ('hyundai', 0.6224716901779175)]"
+       "[('companheira', 0.5332030057907104),\n",
+       " ('governanta', 0.5135449171066284),\n",
+       " ('noiva', 0.5034705400466919),\n",
+       " ('madrasta', 0.49818557500839233),\n",
+       " ('neta', 0.49594759941101074),\n",
+       " ('sogra', 0.4903968572616577),\n",
+       " ('tia', 0.4804190993309021),\n",
+       " ('prostituta', 0.4723840355873108),\n",
+       " ('esposa', 0.4710380434989929),\n",
+       " ('sobrinha', 0.46204090118408203)]"
       ]
      },
      "execution_count": 12,
@@ -384,7 +320,7 @@
     }
    ],
    "source": [
-    "model.wv.most_similar(positive=['samsung'])"
+    "model.wv.most_similar(positive=['insuportável', 'mulher'], negative=['homem'])"
    ]
   },
   {
@@ -399,16 +335,16 @@
     {
      "data": {
       "text/plain": [
-       "[('keynesianismo', 0.4925394654273987),\n",
-       " ('neoliberalismo', 0.49050548672676086),\n",
-       " ('marxismo', 0.48223426938056946),\n",
-       " ('corporativismo', 0.4770309031009674),\n",
-       " ('coletivismo', 0.4740025997161865),\n",
-       " ('imperialismo', 0.47027409076690674),\n",
-       " ('industrialismo', 0.4685702919960022),\n",
-       " ('historicismo', 0.4652341604232788),\n",
-       " ('socialismo', 0.46425700187683105),\n",
-       " ('estruturalismo', 0.4628419578075409)]"
+       "[('minnie', 0.549763560295105),\n",
+       " ('carol', 0.5411068201065063),\n",
+       " ('namorada', 0.5338138341903687),\n",
+       " ('kelly', 0.521699070930481),\n",
+       " ('donna', 0.5208052396774292),\n",
+       " ('sitcom', 0.5154778957366943),\n",
+       " ('lady', 0.5107433795928955),\n",
+       " ('natasha', 0.5052558183670044),\n",
+       " ('fotógrafa', 0.5045852661132812),\n",
+       " ('barbie', 0.5028849840164185)]"
       ]
      },
      "execution_count": 13,
@@ -417,7 +353,7 @@
     }
    ],
    "source": [
-    "model.wv.most_similar(positive=['capitalismo'], negative=['dinheiro'])"
+    "model.wv.most_similar(positive=['mickey', 'mulher'], negative=['homem'])"
    ]
   },
   {
@@ -432,19 +368,85 @@
     {
      "data": {
       "text/plain": [
-       "[('hérault', 0.4355013072490692),\n",
-       " ('languedoc', 0.43341681361198425),\n",
-       " ('périgord', 0.4287109673023224),\n",
-       " ('albret', 0.4202360510826111),\n",
-       " ('brissac', 0.4153077006340027),\n",
-       " ('cotterêts', 0.41490107774734497),\n",
-       " ('roussillon', 0.4148673117160797),\n",
-       " ('albi', 0.41349804401397705),\n",
-       " ('tonnay', 0.41253000497817993),\n",
-       " ('coypel', 0.40943560004234314)]"
+       "[('industries', 0.8153011202812195),\n",
+       " ('hyundai', 0.8119423985481262),\n",
+       " ('panasonic', 0.7943166494369507),\n",
+       " ('lg', 0.7743003964424133),\n",
+       " ('aerospace', 0.7737675905227661),\n",
+       " ('corp', 0.7616852521896362),\n",
+       " ('corporation', 0.760970950126648),\n",
+       " ('technologies', 0.7609294652938843),\n",
+       " ('electronics', 0.7602411508560181),\n",
+       " ('daewoo', 0.7590417861938477)]"
       ]
      },
      "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.wv.most_similar(positive=['samsung'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('marxismo', 0.5598196983337402),\n",
+       " ('anarquismo', 0.558821976184845),\n",
+       " ('sindicalismo', 0.549271821975708),\n",
+       " ('estruturalismo', 0.5447481870651245),\n",
+       " ('racionalismo', 0.5446571111679077),\n",
+       " ('positivismo', 0.5377087593078613),\n",
+       " ('marxista', 0.5304422378540039),\n",
+       " ('juche', 0.5302650332450867),\n",
+       " ('humanismo', 0.5284522175788879),\n",
+       " ('utópico', 0.5283548831939697)]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.wv.most_similar(positive=['capitalismo'], negative=['dinheiro'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('francês', 0.3407854437828064),\n",
+       " ('navarra', 0.32652896642684937),\n",
+       " ('condestável', 0.32290512323379517),\n",
+       " ('guesclin', 0.322375625371933),\n",
+       " ('jean', 0.3216290771961212),\n",
+       " ('armagnac', 0.3080698251724243),\n",
+       " ('saint', 0.30327075719833374),\n",
+       " ('haro', 0.2970321774482727),\n",
+       " ('jacques', 0.2939528822898865),\n",
+       " ('brézé', 0.29166901111602783)]"
+      ]
+     },
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
